[tool.poetry]
name = "remarkdav"
version = "0.1.0"
description = "A Tool to sync webdav files (PDF) to a Remarkable"
authors = ["Jonathan Weth <git@jonathanweth.de>"]

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.2"
click = "^7.1.2"
webdavclient3 = "^3.14.5"
dateparser = "^1.0.0"
tabulate = "^0.8.7"
peewee = "^3.14.0"

[tool.poetry.dev-dependencies]
tox = "^3.20.1"
pytest = "^6.0"
safety = "^1.8.5"
flake8 = "^3.7.9"
flake8-fixme = "^1.1.1"
flake8-mypy = "^17.8.0"
flake8-bandit = "^2.1.2"
flake8-builtins = "^1.4.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
black = "^20.8b1"
flake8-black = "^0.2.0"
isort = "^5.0.0"
flake8-isort = "^4.0.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"

[tool.poetry.scripts]
remarkdav = 'remarkdav.cli:cli'

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
