[tool.poetry]
name = "remarkdav"
version = "1.0.1"
description = "A tool to sync webdav files (only PDF) to the reMarkable cloud"
authors = ["Jonathan Weth <dev@jonathanweth.de>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = "^3.1.2"
click = ">=7.1.2,<9.0.0"
webdavclient3 = "^3.14.5"
dateparser = "^1.0.0"
peewee = "^3.14.0"
rmapy = "^0.2.2"
fpdf = "^1.7.2"
PyPDF2 = "^1.26.0"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
pytest = "^6.2"
safety = "^1.10.3"
flake8 = "^3.9.2"
flake8-fixme = "^1.1.1"
flake8-mypy = "^17.8.0"
flake8-bandit = "^2.1.2"
flake8-builtins = "^1.4.1"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
black = "^21.5b2"
flake8-black = "^0.2.0"
isort = "^5.8.0"
flake8-isort = "^4.0.0"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.2"

[tool.poetry.scripts]
remarkdav = 'remarkdav.cli:cli'

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
